# AI-Powered-Smart-Water-Management-System

./: .replit  README.md  anomaly_detector.py  anomaly_model.pkl  app.py  data_manager.py  gemini_helper.py  lstm_predictor.h5  predictor.py  predictor_scalers.pkl  pyproject.toml  rf_predictor.pkl  testing.py
attached_assets/: Pasted--Prompt-Title-AI-Powered-Smart-Water-Management-and-Prediction-System-Prompt-Description-1762004041611_1762004041614.txt
