[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.47.0",
    "kagglehub>=0.3.13",
    "keras>=3.12.0",
    "plotly>=6.3.1",
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "tensorflow>=2.20.0",
]
